# RRT_DQN_PATH_PLANNING

./: CMakeLists.txt  README.md  gelo_setup.bash  package.xml
data/: Alg_trieno_python_simu.ipynb  raw_data.csv
launch/: dynamic.launch  farm_world.launch  objs_world.launch  training_world.launch
models/: model.dae
models/barn/: model.config  model.sdf
models/barn_3/: model.config  model.sdf
models/barn_dae/: barn.dae
models/barn_scketup/: model.dae
models/barn_sdf/: model.config  model.sdf
models/big_mud/: model.config  model.sdf
models/grass/: model.config  model.sdf
models/grass/materials/scripts/: grass.material
models/grass/meshes/: 10450_Rectangular_Grass_Patch_v1_iterations-2.mtl
models/grass_plane/: model.config  model.sdf
models/iris_rplidar/: iris_rplidar.sdf  iris_rplidar_CERTO.sdf
models/mud2/: model.config  model.sdf
models/my_mud_box/: model.config  model.sdf
models/oak_tree/: model.sdf
models/olive_tree/: model.config  model.sdf
models/simple_box/: model.sdf
models/truck/: model.config  model.sdf
scripts/: Alg_trieno_python_simu.ipynb  agent.py  brain.py  dynamic_objs.py  last_brain.pth  mission_planner.py  teste.py  trainner.py  truck_movement_clone.py  world_builder.py
scripts/.ipynb_checkpoints/: Alg_trieno_python_simu-checkpoint.ipynb
worlds/: barn_world.world  baylands_oak_tree.world  farm_final_world.world  green_house_world.world  oak_tree.world  testing_world.world  training_world.world
